chore: Changes to get things working in demo + minor fixes